--- a/moermiao.html
+++ b/moermiao.html
@@ -29,3 +29,4 @@ src="https://yandex.ru/images/search?from=tabbar&img_url=https%3A%2F%2Fcatalog.s
 </ul>
 </section>
 </div>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
